--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -2,21 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-    <key>BGTaskSchedulerPermittedIdentifiers</key>
-    <array>
-            <string>com.test.agoraFlutterQuickstart.nerds</string>
-        </array>
-    
-    <key>UIBackgroundModes</key>
-    <array>
-            <string>voip</string>
-            <string>audio</string>
-            <string>fetch</string>
-            <string>processing</string>
-            <string>remote-notification</string>
-        </array>
-    
-    
+	<key>BGTaskSchedulerPermittedIdentifiers</key>
+	<array>
+		<string>com.test.agoraFlutterQuickstart.nerds</string>
+	</array>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
@@ -32,11 +21,11 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>$(FLUTTER_BUILD_NAME)</string>
+	<string>$(MARKETING_VERSION)</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>$(FLUTTER_BUILD_NUMBER)</string>
+	<string>$(CURRENT_PROJECT_VERSION)</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSCameraUsageDescription</key>
